--- a/fiverr/html-css/css-still-life/styles.css
+++ b/fiverr/html-css/css-still-life/styles.css
@@ -2,8 +2,9 @@ body{
     background-color: lightgrey;
 }
 
+/* frame */
 section{
-    background-color: white;
+    /* background-color: white; */
     border: 1px solid grey;
     width: 700px;
     height: 700px;
@@ -11,6 +12,10 @@ section{
     margin-top: 50px;
 
     z-index: 0;
+
+    background-image: url(./ref.png);
+    opacity: 0.5;
+    background-size: cover;
 }
 
 section::before{
@@ -24,11 +29,13 @@ section::before{
     bottom: 0;
 }
 
-/* section div{
-    background-color: lightgray;
+*{
+    /* background-color: lightgray;
     width: 10px;
-    height: 10px;
-} */
+    height: 10px; */
+
+    border-radius: 10px;
+}
 
 /*  ===  */
 
@@ -36,7 +43,7 @@ section::before{
     position: relative;
     top: 450px;
     border: 1px solid black;
-
+    z-index: -9000;
 }
 
 .kettle{
@@ -48,58 +55,55 @@ section::before{
 }
 
 #black-cap{
-    /* background-color: black; */
-
-    border-bottom: 75px solid black;
+    border-bottom: 45px solid black;
 	border-left: 12.5px solid transparent;
 	border-right: 12.5px solid transparent;
 	height: 0;
-	width: 70px;
+	width: 40px;
 
     position: relative;
-    top:0px;
+    top: 25px;
     left: 85px;
 
     transform: rotate(180deg) scaleX(-1);
 }
 
+/* spout */
 #black-cap::after{
     content: ' ';
 }
 
+/* rounded lid */
 #red-kettle::before{
     content: ' ';
     display: block;
     background-color: pink;
-    height: 50px;
+    height: 40px;
     width:  250px;
     position: relative;
+    border-radius: 10px;
 
-    top: 275px;
+    top: 200px;
     left: 0px;
 }
 
+/* kettle body */
 #red-kettle{
-    /* background-color: black; */
-
     transform: rotate(180deg) scaleX(-1);
-    border-bottom: 275px solid red;
+    border-bottom: 200px solid red;
 	border-left: 12.5px solid transparent;
 	border-right: 12.5px solid transparent;
 	height: 0;
 	width: 250px;
     position: relative;
+    border-radius: 10px;
 
-    /* padding-bottom: 10px; */
-
-    /* height: 350px; */
-    /* width:  250px; */
-
-    top: 50px;
+    top: 65px;
     left: 0px;
 
 }
 
+/* kettle base */
 #red-kettle::after{
     content: ' ';
     display: block;
@@ -107,16 +111,15 @@ section::before{
     height: 50px;
     width:  220px;
     position: relative;
+    border-radius: 10px;
 
-    top: -100px;
+    top: -90px;
     left: 15px;
 }
 
 #silver-base{
     content: ' ';
-    /* background-color: lightgray; */
-
-    border-bottom: 150px solid lightgray;
+    border-bottom: 200px solid lightgray;
 	border-left: 12.5px solid transparent;
 	border-right: 12.5px solid transparent;
 
@@ -126,19 +129,98 @@ section::before{
 
     top: 100px;
     left: 0px;
+    z-index: 0;
 }
 
 
 .mug-stack{
-    /* border: 1px solid black; */
     position: relative;
     top:0px;
     left: 20px;
 }
 
-#stripped-mug1, #stripped-mug2, #stripped-mug3{
-    background-color: blue;
+/* white mug body */
+#stripped-mug{
+    content: ' ';
+    position: relative;
+    background-color: white;
+    height: 115px;
+    width: 130px;
+
+    top: -75px;
+    left: 265px;
 }
+
+/* white round handle */
+#stripped-mug::before{
+    content: " ";
+    display: block;
+    box-sizing: border-box;
+    position: absolute;
+    border: 15px solid white;
+    width: 75px;
+    height: 60px;
+    left: 50%;
+    margin-left: -115px;
+    top: 25px;
+    border-top-left-radius: 7em;
+    border-top-right-radius: 7em;
+
+    transform: rotate(-90deg) scaleX(-1);
+}
+
+/* mug base */
+#stripped-mug::after{
+    content: ' ';
+    display: block;
+    position: relative;
+    background-color: white;
+    height: 25px;
+    width: 110px;
+    border-radius: 10px;
+    top: 5px;
+    left: 10px;
+    z-index: -10;
+}
+
+
+/* blue stripes */
+#mug-flag{
+    height : 100px;
+    width  : 120px;
+    border-radius: 0px;
+    left: 10px;
+    top: 5px;
+    position: relative;
+    background: linear-gradient(to bottom, 
+        blue    0%, blue  20%, 
+        white   0%, white 40%,        
+        blue    0%, blue  60%, 
+        white   0%, white 80%,        
+        blue 0%);
+}
+
+/* red triangle */
+#mug-flag::before{
+    width: 0;
+    height: 0;
+    display: block;
+    content: ' ';
+    border-left: 60px solid red;
+    border-top: 50px solid transparent;
+    border-bottom: 50px solid transparent;
+}
+
+#mug-flag p{
+    color: white;
+    position: relative;
+    font-size: 25px;
+    top: -95px;
+    left: 5px;
+}
+
+
+
 
 #coffee-jar{
     background-color: yellow;
